need LandR@ecoregion

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -43,6 +43,7 @@ Suggests:
     spatstat,
     testthat
 Remotes:
+    PredictiveEcology/LandR@ecoregion,
     PredictiveEcology/reproducible@development
 VignetteBuilder:
     knitr,
