cleanup, docs fixes, redoc

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -27,11 +27,14 @@ importFrom(data.table,setnames)
 importFrom(fasterize,fasterize)
 importFrom(future.apply,future_lapply)
 importFrom(kSamples,ad.test)
+importFrom(purrr,pmap)
 importFrom(purrr,transpose)
 importFrom(raster,adjacent)
 importFrom(raster,crs)
 importFrom(raster,ncell)
 importFrom(raster,raster)
+importFrom(raster,setValues)
+importFrom(raster,stack)
 importFrom(reproducible,prepInputs)
 importFrom(reproducible,projectInputs)
 importFrom(sf,st_as_sf)
