--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,7 +5,9 @@ export(.objfun)
 export(annualStacksToDTx1000)
 export(chk_duplicatedStartPixels)
 export(dtReplaceNAwith0)
+export(getFirePoints_NFDB)
 export(getFirePolygons)
+export(getFirePolygons_NFDB)
 export(logistic4p)
 export(logistic5p)
 export(makeBufferedFires)
