--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,13 +7,13 @@ export(chk_duplicatedStartPixels)
 export(dtReplaceNAwith0)
 export(getFirePoints_NFDB)
 export(getFirePolygons)
-export(getFirePolygons_NFDB)
 export(logistic4p)
 export(logistic5p)
 export(makeBufferedFires)
 export(simplifyFireBuffered)
 import(methods)
 importFrom(LandR,asInteger)
+importFrom(SpaDES.tools,adj)
 importFrom(SpaDES.tools,spread)
 importFrom(crayon,green)
 importFrom(crayon,red)
@@ -31,7 +31,6 @@ importFrom(future.apply,future_lapply)
 importFrom(kSamples,ad.test)
 importFrom(purrr,pmap)
 importFrom(purrr,transpose)
-importFrom(raster,adjacent)
 importFrom(raster,crs)
 importFrom(raster,ncell)
 importFrom(raster,raster)
