--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -3,7 +3,8 @@ Type: Package
 Title: Utilites for Working With the 'fireSense' Group of 'SpaDES' Modules
 Description: More about what it does (maybe more than one line)
     Use four spaces when indenting paragraphs within the Description.
-Version: 0.0.0.9009
+Date: 2020-04-10
+Version: 0.0.0.9010
 Authors@R: c(
     person("Jean", "Marchal", email = "jean.d.marchal@gmail.com",
     role = c("aut")),
@@ -44,7 +45,7 @@ Suggests:
     testthat
 Remotes:
     PredictiveEcology/LandR@ecoregion,
-    PredictiveEcology/reproducible@development
+    PredictiveEcology/reproducible@messagingOverhaul
 VignetteBuilder:
     knitr,
     rmarkdown
