cleanUpCentroid new fn

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,6 +7,7 @@ export(.objfun)
 export(annualStacksToDTx1000)
 export(bufferToArea)
 export(chk_duplicatedStartPixels)
+export(cleanUpPolyCentroids)
 export(dtReplaceNAwith0)
 export(getFirePoints_NFDB)
 export(getFirePolygons)
@@ -23,17 +24,22 @@ importFrom(data.table,rbindlist)
 importFrom(data.table,set)
 importFrom(data.table,setDT)
 importFrom(data.table,setDTthreads)
+importFrom(data.table,setkeyv)
 importFrom(data.table,setnames)
 importFrom(fasterize,fasterize)
 importFrom(kSamples,ad.test)
 importFrom(purrr,map2)
 importFrom(purrr,pmap)
 importFrom(purrr,transpose)
+importFrom(raster,cellFromXY)
+importFrom(raster,crs)
 importFrom(raster,ncell)
 importFrom(reproducible,prepInputs)
 importFrom(sf,st_as_sf)
 importFrom(sf,st_crs)
 importFrom(sf,st_transform)
+importFrom(sp,SpatialPointsDataFrame)
+importFrom(sp,spTransform)
 importFrom(stats,dbinom)
 importFrom(stats,is.empty.model)
 importFrom(stats,median)
