--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,6 +11,7 @@ export(cleanUpPolyCentroids)
 export(dtReplaceNAwith0)
 export(getFirePoints_NFDB)
 export(getFirePolygons)
+export(logistic3p)
 export(logistic4p)
 export(logistic5p)
 export(multiplier)
