rbetaBetween -- new function

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -15,6 +15,7 @@ export(logistic3p)
 export(logistic4p)
 export(logistic5p)
 export(multiplier)
+export(rbetaBetween)
 import(methods)
 importFrom(LandR,asInteger)
 importFrom(SpaDES.tools,spread)
