--- a/NAMESPACE
+++ b/NAMESPACE
@@ -17,6 +17,7 @@ export(logistic5p)
 export(multiplier)
 export(rbetaBetween)
 import(methods)
+importFrom(EnvStats,demp)
 importFrom(LandR,asInteger)
 importFrom(SpaDES.tools,spread)
 importFrom(data.table,":=")
