new functions, cleaining

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,22 +4,27 @@ S3method(bufferToArea,SpatialPolygons)
 S3method(bufferToArea,list)
 export(.doDataChecks)
 export(.objfun)
+export(DEoptimIterative)
 export(annualStacksToDTx1000)
 export(bufferToArea)
 export(chk_duplicatedStartPixels)
-export(cleanUpPolyCentroids)
 export(dtReplaceNAwith0)
 export(getFirePoints_NFDB)
 export(getFirePolygons)
+export(harmonizeBufferAndPoints)
 export(logistic3p)
 export(logistic4p)
 export(logistic5p)
+export(makeLociList)
 export(multiplier)
 export(rbetaBetween)
+export(runDEoptim)
+export(visualizeDE)
 import(methods)
 importFrom(EnvStats,demp)
 importFrom(LandR,asInteger)
 importFrom(SpaDES.tools,spread)
+importFrom(crayon,blurred)
 importFrom(data.table,":=")
 importFrom(data.table,as.data.table)
 importFrom(data.table,data.table)
@@ -30,13 +35,19 @@ importFrom(data.table,setDTthreads)
 importFrom(data.table,setkeyv)
 importFrom(data.table,setnames)
 importFrom(fasterize,fasterize)
+importFrom(future,makeClusterPSOCK)
 importFrom(kSamples,ad.test)
+importFrom(parallel,clusterEvalQ)
+importFrom(parallel,clusterExport)
+importFrom(purrr,map)
 importFrom(purrr,map2)
 importFrom(purrr,pmap)
 importFrom(purrr,transpose)
 importFrom(raster,cellFromXY)
 importFrom(raster,crs)
+importFrom(raster,extract)
 importFrom(raster,ncell)
+importFrom(reproducible,checkPath)
 importFrom(reproducible,prepInputs)
 importFrom(sf,st_as_sf)
 importFrom(sf,st_crs)
