--- a/NAMESPACE
+++ b/NAMESPACE
@@ -49,6 +49,7 @@ importFrom(raster,extract)
 importFrom(raster,ncell)
 importFrom(reproducible,checkPath)
 importFrom(reproducible,prepInputs)
+importFrom(rlang,exec)
 importFrom(sf,st_as_sf)
 importFrom(sf,st_crs)
 importFrom(sf,st_transform)
