--- a/NAMESPACE
+++ b/NAMESPACE
@@ -47,6 +47,7 @@ importFrom(raster,cellFromXY)
 importFrom(raster,crs)
 importFrom(raster,extract)
 importFrom(raster,ncell)
+importFrom(raster,stack)
 importFrom(reproducible,checkPath)
 importFrom(reproducible,prepInputs)
 importFrom(rlang,exec)
@@ -59,4 +60,5 @@ importFrom(stats,dbinom)
 importFrom(stats,is.empty.model)
 importFrom(stats,median)
 importFrom(stats,terms)
+importFrom(usefun,cbindFromList)
 importFrom(utils,tail)
