--- a/NAMESPACE
+++ b/NAMESPACE
@@ -60,5 +60,5 @@ importFrom(stats,dbinom)
 importFrom(stats,is.empty.model)
 importFrom(stats,median)
 importFrom(stats,terms)
-importFrom(usefun,cbindFromList)
+importFrom(usefulFuns,cbindFromList)
 importFrom(utils,tail)
