--- a/NAMESPACE
+++ b/NAMESPACE
@@ -21,8 +21,12 @@ export(rbetaBetween)
 export(runDEoptim)
 export(visualizeDE)
 import(methods)
+importFrom(DEoptim,DEoptim)
+importFrom(DEoptim,DEoptim.control)
 importFrom(EnvStats,demp)
 importFrom(LandR,asInteger)
+importFrom(SpaDES.core,dyear)
+importFrom(SpaDES.tools,distanceFromEachPoint)
 importFrom(SpaDES.tools,spread)
 importFrom(crayon,blurred)
 importFrom(data.table,":=")
@@ -34,31 +38,66 @@ importFrom(data.table,setDT)
 importFrom(data.table,setDTthreads)
 importFrom(data.table,setkeyv)
 importFrom(data.table,setnames)
+importFrom(data.table,setorderv)
 importFrom(fasterize,fasterize)
 importFrom(future,makeClusterPSOCK)
+importFrom(grDevices,dev.off)
+importFrom(grDevices,png)
+importFrom(graphics,abline)
+importFrom(graphics,axis)
+importFrom(graphics,hist)
+importFrom(graphics,mtext)
+importFrom(graphics,par)
 importFrom(kSamples,ad.test)
+importFrom(magrittr,"%>%")
 importFrom(parallel,clusterEvalQ)
 importFrom(parallel,clusterExport)
+importFrom(parallel,stopCluster)
+importFrom(pemisc,rasterToMatch)
 importFrom(purrr,map)
 importFrom(purrr,map2)
 importFrom(purrr,pmap)
 importFrom(purrr,transpose)
+importFrom(quickPlot,Plot)
+importFrom(quickPlot,clearPlot)
+importFrom(quickPlot,dev)
+importFrom(quickPlot,gpar)
+importFrom(quickPlot,isRstudioServer)
+importFrom(raster,"crs<-")
+importFrom(raster,buffer)
 importFrom(raster,cellFromXY)
+importFrom(raster,compareCRS)
+importFrom(raster,crop)
 importFrom(raster,crs)
+importFrom(raster,extent)
 importFrom(raster,extract)
 importFrom(raster,ncell)
+importFrom(raster,raster)
+importFrom(raster,res)
 importFrom(raster,stack)
+importFrom(raster,trim)
+importFrom(raster,xyFromCell)
+importFrom(reproducible,Cache)
+importFrom(reproducible,Checksums)
 importFrom(reproducible,checkPath)
+importFrom(reproducible,loadFromCache)
 importFrom(reproducible,prepInputs)
-importFrom(rlang,exec)
+importFrom(reproducible,showCache)
 importFrom(sf,st_as_sf)
 importFrom(sf,st_crs)
 importFrom(sf,st_transform)
+importFrom(sp,SpatialPoints)
 importFrom(sp,SpatialPointsDataFrame)
 importFrom(sp,spTransform)
 importFrom(stats,dbinom)
+importFrom(stats,dnorm)
 importFrom(stats,is.empty.model)
 importFrom(stats,median)
+importFrom(stats,quantile)
+importFrom(stats,rbeta)
+importFrom(stats,rnorm)
 importFrom(stats,terms)
+importFrom(tools,file_path_sans_ext)
 importFrom(usefulFuns,cbindFromList)
+importFrom(utils,head)
 importFrom(utils,tail)
