--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,6 +12,7 @@ export(dtReplaceNAwith0)
 export(getFirePoints_NFDB)
 export(getFirePolygons)
 export(harmonizeBufferAndPoints)
+export(logistic2p)
 export(logistic3p)
 export(logistic4p)
 export(logistic5p)
