--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,7 @@ S3method(bufferToArea,list)
 export(.doDataChecks)
 export(.objfun)
 export(DEoptimIterative)
+export(annualStackToDTx1000)
 export(annualStacksToDTx1000)
 export(bufferToArea)
 export(chk_duplicatedStartPixels)
@@ -48,6 +49,7 @@ importFrom(raster,cellFromXY)
 importFrom(raster,crs)
 importFrom(raster,extract)
 importFrom(raster,ncell)
+importFrom(raster,stack)
 importFrom(reproducible,checkPath)
 importFrom(reproducible,prepInputs)
 importFrom(rlang,exec)
@@ -60,4 +62,5 @@ importFrom(stats,dbinom)
 importFrom(stats,is.empty.model)
 importFrom(stats,median)
 importFrom(stats,terms)
+importFrom(usefulFuns,cbindFromList)
 importFrom(utils,tail)
