--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,6 +10,7 @@ export(bufferToArea)
 export(chk_duplicatedStartPixels)
 export(dtReplaceNAwith0)
 export(getFirePoints_NFDB)
+export(getFirePoints_NFDB_V2)
 export(getFirePolygons)
 export(harmonizeBufferAndPoints)
 export(logistic3p)
@@ -82,10 +83,12 @@ importFrom(reproducible,Checksums)
 importFrom(reproducible,checkPath)
 importFrom(reproducible,loadFromCache)
 importFrom(reproducible,prepInputs)
+importFrom(reproducible,projectInputs)
 importFrom(reproducible,showCache)
 importFrom(sf,st_as_sf)
 importFrom(sf,st_crs)
 importFrom(sf,st_transform)
+importFrom(sp,"coordinates<-")
 importFrom(sp,SpatialPoints)
 importFrom(sp,SpatialPointsDataFrame)
 importFrom(sp,spTransform)
