Deal with missing names

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -81,6 +81,7 @@ importFrom(raster,raster)
 importFrom(raster,res)
 importFrom(raster,stack)
 importFrom(raster,trim)
+importFrom(raster,unstack)
 importFrom(raster,xyFromCell)
 importFrom(reproducible,Cache)
 importFrom(reproducible,Checksums)
