--- a/.travis.yml
+++ b/.travis.yml
@@ -31,16 +31,8 @@ jobs:
     before_install:
       - mkdir $HOME/.R && echo -e 'CXX_STD = CXX14\n\nVER=\nCCACHE=ccache\nCC=$(CCACHE) gcc$(VER) -std=gnu99\nCXX=$(CCACHE) g++$(VER)\nC11=$(CCACHE) g++$(VER)\nC14=$(CCACHE) g++$(VER)\nFC=$(CCACHE) gfortran$(VER)\nF77=$(CCACHE) gfortran$(VER)' > $HOME/.R/Makevars
       - echo -e 'max_size = 5.0G\nsloppiness = include_file_ctime\nhash_dir=false' > $HOME/.ccache/ccache.conf
-    r_binary_packages:
-      - BH
-      - dplyr
-      - ggplot2
-      - igraph
-      - RSQlite
-      - stringi
-    r_packages:
-      - rgdal
-      - rgeos
+      - echo 'options(repos = c(CRAN = "https://packagemanager.rstudio.com/all/__linux__/xenial/latest"))' >> ~/.Rprofile.site
+      - echo 'options(HTTPUserAgent = paste0("R/", getRversion(), " R (", paste(getRversion(), R.version["platform"], R.version["arch"], R.version["os"]), ")"))' >> ~/.Rprofile.site
   - os: linux
     dist: xenial
     r: release
@@ -64,18 +56,10 @@ jobs:
     before_install:
       - mkdir $HOME/.R && echo -e 'CXX_STD = CXX14\n\nVER=\nCCACHE=ccache\nCC=$(CCACHE) gcc$(VER) -std=gnu99\nCXX=$(CCACHE) g++$(VER)\nC11=$(CCACHE) g++$(VER)\nC14=$(CCACHE) g++$(VER)\nFC=$(CCACHE) gfortran$(VER)\nF77=$(CCACHE) gfortran$(VER)' > $HOME/.R/Makevars
       - echo -e 'max_size = 5.0G\nsloppiness = include_file_ctime\nhash_dir=false' > $HOME/.ccache/ccache.conf
-    r_binary_packages:
-      - BH
-      - dplyr
-      - ggplot2
-      - igraph
-      - RSQlite
-      - stringi
+      - echo 'options(repos = c(CRAN = "https://packagemanager.rstudio.com/all/__linux__/xenial/latest"))' >> ~/.Rprofile.site
+      - echo 'options(HTTPUserAgent = paste0("R/", getRversion(), " R (", paste(getRversion(), R.version["platform"], R.version["arch"], R.version["os"]), ")"))' >> ~/.Rprofile.site
     r_packages:
       - covr
-      - devtools
-      - rgdal
-      - rgeos
     r_github_packages:
       - jimhester/lintr
     after_success:
@@ -105,18 +89,8 @@ jobs:
     before_install:
       - mkdir $HOME/.R && echo -e 'CXX_STD = CXX14\n\nVER=\nCCACHE=ccache\nCC=$(CCACHE) gcc$(VER) -std=gnu99\nCXX=$(CCACHE) g++$(VER)\nC11=$(CCACHE) g++$(VER)\nC14=$(CCACHE) g++$(VER)\nFC=$(CCACHE) gfortran$(VER)\nF77=$(CCACHE) gfortran$(VER)' > $HOME/.R/Makevars
       - echo -e 'max_size = 5.0G\nsloppiness = include_file_ctime\nhash_dir=false' > $HOME/.ccache/ccache.conf
-    r_binary_packages:
-      - BH
-      - dplyr
-      - ggplot2
-      - igraph
-      - RSQlite
-      - stringi
-    r_packages:
-      - devtools
-      - rgdal
-      - rgeos
-      - XML
+      - echo 'options(repos = c(CRAN = "https://packagemanager.rstudio.com/all/__linux__/xenial/latest"))' >> ~/.Rprofile.site
+      - echo 'options(HTTPUserAgent = paste0("R/", getRversion(), " R (", paste(getRversion(), R.version["platform"], R.version["arch"], R.version["os"]), ")"))' >> ~/.Rprofile.site
   - os: osx
     osx_image: xcode9.4
     addons:
