--- a/.travis.yml
+++ b/.travis.yml
@@ -33,6 +33,9 @@ jobs:
       - echo -e 'max_size = 5.0G\nsloppiness = include_file_ctime\nhash_dir=false' > $HOME/.ccache/ccache.conf
       - echo 'options(repos = c(CRAN = "https://packagemanager.rstudio.com/all/__linux__/xenial/latest"))' >> ~/.Rprofile.site
       - echo 'options(HTTPUserAgent = paste0("R/", getRversion(), " R (", paste(getRversion(), R.version["platform"], R.version["arch"], R.version["os"]), ")"))' >> ~/.Rprofile.site
+    r_github_packages:
+      - PredictiveEcology/Require@development
+      - traversc/stringfish
   - os: linux
     dist: xenial
     r: release
@@ -62,6 +65,8 @@ jobs:
       - covr
     r_github_packages:
       - jimhester/lintr
+      - PredictiveEcology/Require@development
+      - traversc/stringfish
     after_success:
       - Rscript -e 'covr::coveralls(type = "all", quiet = FALSE)'
       - Rscript -e 'lintr::lint_package()'
@@ -91,6 +96,9 @@ jobs:
       - echo -e 'max_size = 5.0G\nsloppiness = include_file_ctime\nhash_dir=false' > $HOME/.ccache/ccache.conf
       - echo 'options(repos = c(CRAN = "https://packagemanager.rstudio.com/all/__linux__/xenial/latest"))' >> ~/.Rprofile.site
       - echo 'options(HTTPUserAgent = paste0("R/", getRversion(), " R (", paste(getRversion(), R.version["platform"], R.version["arch"], R.version["os"]), ")"))' >> ~/.Rprofile.site
+    r_github_packages:
+      - PredictiveEcology/Require@development
+      - traversc/stringfish
   - os: osx
     osx_image: xcode9.4
     addons:
