use github actions instead of travis
- travis isn't using R 4.0.2, which prevents `Rcpp` installation therefore everything fails.
- test on ubuntu 18.04 (bionic)
- longer build times
- all three major OSes at once

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -50,11 +50,12 @@ Suggests:
     spelling,
     testthat
 Remotes:
-    PredictiveEcology/LandR@development,
-    PredictiveEcology/pemisc@development,
-    PredictiveEcology/quickPlot@development,
-    PredictiveEcology/reproducible@development,
+    traversc/stringfish,
     PredictiveEcology/Require@development,
+    PredictiveEcology/reproducible@development,
+    PredictiveEcology/quickPlot@development,
+    PredictiveEcology/pemisc@development,
+    PredictiveEcology/LandR@development,
     PredictiveEcology/usefulFuns@development
 VignetteBuilder:
     knitr,
