github actions: install prev XML version for R < 4.0.0

--- a/.github/workflows/R-CMD-check.yaml
+++ b/.github/workflows/R-CMD-check.yaml
@@ -72,6 +72,10 @@ jobs:
       - name: Install dependencies
         run: |
           remotes::install_deps(dependencies = TRUE)
+          if (R.version$major < 4) {
+            remotes::install_cran("versions")
+            versions::install.versions("XML", "3.99-0.3")
+          }
           remotes::install_cran("rcmdcheck")
         shell: Rscript {0}
 
