--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,6 +11,7 @@ export(DEoptimIterative)
 export(annualStackToDTx1000)
 export(bufferToArea)
 export(chk_duplicatedStartPixels)
+export(classifyCohortsFireSenseSpread)
 export(dtReplaceNAwith0)
 export(getFirePoints_NFDB)
 export(getFirePoints_NFDB_V2)
@@ -32,6 +33,7 @@ importFrom(EnvStats,demp)
 importFrom(LandR,asInteger)
 importFrom(SpaDES.core,dyear)
 importFrom(SpaDES.tools,distanceFromEachPoint)
+importFrom(SpaDES.tools,rasterizeReduced)
 importFrom(SpaDES.tools,spread)
 importFrom(crayon,blurred)
 importFrom(data.table,":=")
@@ -76,6 +78,7 @@ importFrom(raster,crop)
 importFrom(raster,crs)
 importFrom(raster,extent)
 importFrom(raster,extract)
+importFrom(raster,getValues)
 importFrom(raster,ncell)
 importFrom(raster,raster)
 importFrom(raster,res)
