--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -26,9 +26,11 @@ Imports:
     kSamples,
     LandR,
     magrittr,
+    mclust,
     methods,
     quickPlot,
     pemisc,
+    pROC,
     purrr,
     raster,
     reproducible,
