--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,6 +10,10 @@ export(.objfun)
 export(DEoptimIterative)
 export(annualStackToDTx1000)
 export(bufferToArea)
+export(burnClassGenerator)
+export(burnClassPredict)
+export(burnClassSummary)
+export(burnProbFromClass)
 export(chk_duplicatedStartPixels)
 export(dtReplaceNAwith0)
 export(getFirePoints_NFDB)
@@ -55,6 +59,8 @@ importFrom(graphics,mtext)
 importFrom(graphics,par)
 importFrom(kSamples,ad.test)
 importFrom(magrittr,"%>%")
+importFrom(mclust,Mclust)
+importFrom(pROC,roc)
 importFrom(parallel,clusterEvalQ)
 importFrom(parallel,clusterExport)
 importFrom(parallel,stopCluster)
@@ -107,4 +113,5 @@ importFrom(stats,rnorm)
 importFrom(stats,terms)
 importFrom(tools,file_path_sans_ext)
 importFrom(utils,head)
+importFrom(utils,modifyList)
 importFrom(utils,tail)
