apparently need a sneaky imports; clean examples

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -60,6 +60,7 @@ importFrom(graphics,par)
 importFrom(kSamples,ad.test)
 importFrom(magrittr,"%>%")
 importFrom(mclust,Mclust)
+importFrom(mclust,mclustBIC)
 importFrom(pROC,roc)
 importFrom(parallel,clusterEvalQ)
 importFrom(parallel,clusterExport)
