--- a/NAMESPACE
+++ b/NAMESPACE
@@ -108,11 +108,11 @@ importFrom(stats,dbinom)
 importFrom(stats,dnorm)
 importFrom(stats,is.empty.model)
 importFrom(stats,median)
+importFrom(stats,predict)
 importFrom(stats,quantile)
 importFrom(stats,rbeta)
 importFrom(stats,rnorm)
 importFrom(stats,terms)
-importFrom(tools,file_path_sans_ext)
 importFrom(utils,head)
 importFrom(utils,modifyList)
 importFrom(utils,tail)
