--- a/NAMESPACE
+++ b/NAMESPACE
@@ -33,7 +33,6 @@ import(methods)
 importFrom(DEoptim,DEoptim)
 importFrom(DEoptim,DEoptim.control)
 importFrom(EnvStats,demp)
-importFrom(LandR,asInteger)
 importFrom(SpaDES.core,dyear)
 importFrom(SpaDES.tools,distanceFromEachPoint)
 importFrom(SpaDES.tools,spread)
@@ -113,6 +112,7 @@ importFrom(stats,quantile)
 importFrom(stats,rbeta)
 importFrom(stats,rnorm)
 importFrom(stats,terms)
+importFrom(utils,getFromNamespace)
 importFrom(utils,head)
 importFrom(utils,modifyList)
 importFrom(utils,tail)
