--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -15,7 +15,6 @@ Authors@R: c(
 Depends:
     R (>= 3.6)
 Imports:
-    assertthat,
     crayon,
     data.table,
     DEoptim,
@@ -24,7 +23,6 @@ Imports:
     future,
     future.apply,
     kSamples,
-    LandR,
     magrittr,
     mclust,
     methods,
@@ -34,18 +32,17 @@ Imports:
     purrr,
     raster,
     reproducible,
-    rlang,
     sf,
     sp,
     SpaDES.core,
     SpaDES.tools,
-    stats,
-    usefulFuns
+    stats
 Suggests:
     dplyr,
     knitr,
     lintr,
     PtProcess,
+    Require,
     rgeos,
     rmarkdown,
     spatstat,
@@ -56,9 +53,7 @@ Remotes:
     PredictiveEcology/Require@development,
     PredictiveEcology/reproducible@development,
     PredictiveEcology/quickPlot@development,
-    PredictiveEcology/pemisc@development,
-    PredictiveEcology/LandR@development,
-    PredictiveEcology/usefulFuns@development
+    PredictiveEcology/pemisc@development
 VignetteBuilder:
     knitr,
     rmarkdown
