--- a/NAMESPACE
+++ b/NAMESPACE
@@ -14,6 +14,7 @@ export(burnClassGenerator)
 export(burnClassPredict)
 export(burnClassSummary)
 export(burnProbFromClass)
+export(castCohortData)
 export(chk_duplicatedStartPixels)
 export(classifyCohortsFireSenseSpread)
 export(dtReplaceNAwith0)
@@ -27,6 +28,7 @@ export(logistic4p)
 export(logistic5p)
 export(makeLociList)
 export(multiplier)
+export(prepTerrainCovariates)
 export(rbetaBetween)
 export(runDEoptim)
 export(visualizeDE)
@@ -42,13 +44,16 @@ importFrom(crayon,blurred)
 importFrom(data.table,":=")
 importFrom(data.table,as.data.table)
 importFrom(data.table,data.table)
+importFrom(data.table,dcast)
 importFrom(data.table,rbindlist)
 importFrom(data.table,set)
 importFrom(data.table,setDT)
 importFrom(data.table,setDTthreads)
 importFrom(data.table,setkeyv)
+importFrom(data.table,setnafill)
 importFrom(data.table,setnames)
 importFrom(data.table,setorderv)
+importFrom(dplyr,bind_cols)
 importFrom(fasterize,fasterize)
 importFrom(future,makeClusterPSOCK)
 importFrom(grDevices,dev.off)
@@ -89,6 +94,7 @@ importFrom(raster,ncell)
 importFrom(raster,raster)
 importFrom(raster,res)
 importFrom(raster,stack)
+importFrom(raster,terrain)
 importFrom(raster,trim)
 importFrom(raster,unstack)
 importFrom(raster,xyFromCell)
@@ -106,6 +112,7 @@ importFrom(sp,"coordinates<-")
 importFrom(sp,SpatialPoints)
 importFrom(sp,SpatialPointsDataFrame)
 importFrom(sp,spTransform)
+importFrom(spatialEco,hli)
 importFrom(stats,dbinom)
 importFrom(stats,dnorm)
 importFrom(stats,is.empty.model)
