docs and a bug fix

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -17,6 +17,7 @@ export(burnProbFromClass)
 export(castCohortData)
 export(chk_duplicatedStartPixels)
 export(classifyCohortsFireSenseSpread)
+export(climateRasterToDataTable)
 export(dtReplaceNAwith0)
 export(getFirePoints_NFDB)
 export(getFirePoints_NFDB_V2)
@@ -27,6 +28,7 @@ export(logistic3p)
 export(logistic4p)
 export(logistic5p)
 export(makeLociList)
+export(makeVegTerrainPCA)
 export(multiplier)
 export(prepTerrainCovariates)
 export(rbetaBetween)
@@ -36,6 +38,7 @@ import(methods)
 importFrom(DEoptim,DEoptim)
 importFrom(DEoptim,DEoptim.control)
 importFrom(EnvStats,demp)
+importFrom(LandR,asInteger)
 importFrom(SpaDES.core,dyear)
 importFrom(SpaDES.tools,distanceFromEachPoint)
 importFrom(SpaDES.tools,rasterizeReduced)
