--- a/NAMESPACE
+++ b/NAMESPACE
@@ -46,6 +46,7 @@ importFrom(SpaDES.tools,spread)
 importFrom(crayon,blurred)
 importFrom(data.table,":=")
 importFrom(data.table,as.data.table)
+importFrom(data.table,copy)
 importFrom(data.table,data.table)
 importFrom(data.table,dcast)
 importFrom(data.table,rbindlist)
@@ -56,7 +57,6 @@ importFrom(data.table,setkeyv)
 importFrom(data.table,setnafill)
 importFrom(data.table,setnames)
 importFrom(data.table,setorderv)
-importFrom(dplyr,bind_cols)
 importFrom(fasterize,fasterize)
 importFrom(future,makeClusterPSOCK)
 importFrom(grDevices,dev.off)
@@ -94,6 +94,7 @@ importFrom(raster,extent)
 importFrom(raster,extract)
 importFrom(raster,getValues)
 importFrom(raster,ncell)
+importFrom(raster,nlayers)
 importFrom(raster,raster)
 importFrom(raster,res)
 importFrom(raster,stack)
@@ -120,6 +121,7 @@ importFrom(stats,dbinom)
 importFrom(stats,dnorm)
 importFrom(stats,is.empty.model)
 importFrom(stats,median)
+importFrom(stats,prcomp)
 importFrom(stats,predict)
 importFrom(stats,quantile)
 importFrom(stats,rbeta)
