cleanup, redoc, use raster::isLonLat

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -93,6 +93,7 @@ importFrom(raster,crs)
 importFrom(raster,extent)
 importFrom(raster,extract)
 importFrom(raster,getValues)
+importFrom(raster,isLonLat)
 importFrom(raster,ncell)
 importFrom(raster,nlayers)
 importFrom(raster,raster)
