fixes for R CMD check

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -130,5 +130,6 @@ importFrom(stats,rnorm)
 importFrom(stats,terms)
 importFrom(utils,getFromNamespace)
 importFrom(utils,head)
+importFrom(utils,install.packages)
 importFrom(utils,modifyList)
 importFrom(utils,tail)
