--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,7 +6,7 @@ S3method(annualStackToDTx1000,list)
 S3method(bufferToArea,SpatialPolygons)
 S3method(bufferToArea,list)
 export(.doDataChecks)
-export(.objfun)
+export(.objfunSpreadFit)
 export(DEoptimIterative)
 export(annualStackToDTx1000)
 export(bufferToArea)
