Several changes to fix standAge

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -18,6 +18,7 @@ export(castCohortData)
 export(chk_duplicatedStartPixels)
 export(classifyCohortsFireSenseSpread)
 export(climateRasterToDataTable)
+export(cohortsToCovariates)
 export(dtReplaceNAwith0)
 export(getFirePoints_NFDB)
 export(getFirePoints_NFDB_V2)
@@ -98,6 +99,7 @@ importFrom(raster,ncell)
 importFrom(raster,nlayers)
 importFrom(raster,raster)
 importFrom(raster,res)
+importFrom(raster,setValues)
 importFrom(raster,stack)
 importFrom(raster,terrain)
 importFrom(raster,trim)
@@ -111,6 +113,7 @@ importFrom(reproducible,prepInputs)
 importFrom(reproducible,projectInputs)
 importFrom(reproducible,showCache)
 importFrom(sf,st_as_sf)
+importFrom(sf,st_collection_extract)
 importFrom(sf,st_crs)
 importFrom(sf,st_transform)
 importFrom(sp,"coordinates<-")
