--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -3,14 +3,16 @@ Type: Package
 Title: Utilities for Working With the 'fireSense' Group of 'SpaDES' Modules
 Description: Utilities for working with the 'fireSense' group of 'SpaDES' modules.
 Date: 2020-12-15
-Version: 0.0.2
+Version: 0.0.3.0000
 Authors@R: c(
     person("Jean", "Marchal", email = "jean.d.marchal@gmail.com",
     role = c("aut")),
     person("Eliot J B", "McIntire", email = "eliot.mcintire@canada.ca",
     role = c("aut", "cre"), comment=c(ORCID = "0000-0002-6914-8316")),
     person("Alex M", "Chubaty", email = "achubaty@for-cast.ca",
-    role = c("aut"), comment = c(ORCID = "0000-0001-7146-8135"))
+    role = c("aut"), comment = c(ORCID = "0000-0001-7146-8135")),
+    person("Ian", "Eddy", email = "ian.eddy@canada.ca",
+    role = c("aut"), comment = c(ORCID = "0000-0001-7397-2116"))
     )
 Depends:
     R (>= 3.6)
