--- a/NAMESPACE
+++ b/NAMESPACE
@@ -40,6 +40,10 @@ importFrom(DEoptim,DEoptim)
 importFrom(DEoptim,DEoptim.control)
 importFrom(EnvStats,demp)
 importFrom(LandR,asInteger)
+importFrom(RhpcBLASctl,blas_get_num_procs)
+importFrom(RhpcBLASctl,blas_set_num_threads)
+importFrom(RhpcBLASctl,omp_get_max_threads)
+importFrom(RhpcBLASctl,omp_set_num_threads)
 importFrom(SpaDES.core,dyear)
 importFrom(SpaDES.tools,distanceFromEachPoint)
 importFrom(SpaDES.tools,rasterizeReduced)
