cleanup, redoc, R CMD check

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -125,6 +125,7 @@ importFrom(sp,SpatialPoints)
 importFrom(sp,SpatialPointsDataFrame)
 importFrom(sp,spTransform)
 importFrom(spatialEco,hli)
+importFrom(stats,as.formula)
 importFrom(stats,dbinom)
 importFrom(stats,dnorm)
 importFrom(stats,is.empty.model)
