--- a/NAMESPACE
+++ b/NAMESPACE
@@ -58,6 +58,7 @@ importFrom(data.table,rbindlist)
 importFrom(data.table,set)
 importFrom(data.table,setDT)
 importFrom(data.table,setDTthreads)
+importFrom(data.table,setkey)
 importFrom(data.table,setkeyv)
 importFrom(data.table,setnafill)
 importFrom(data.table,setnames)
