added ignition fxns

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -14,12 +14,13 @@ export(burnClassGenerator)
 export(burnClassPredict)
 export(burnClassSummary)
 export(burnProbFromClass)
+export(calcYoungAge)
 export(castCohortData)
 export(chk_duplicatedStartPixels)
 export(classifyCohortsFireSenseSpread)
 export(climateRasterToDataTable)
-export(cohortsToCovariates)
 export(dtReplaceNAwith0)
+export(extractSpecial)
 export(getFirePoints_NFDB)
 export(getFirePoints_NFDB_V2)
 export(getFirePolygons)
@@ -31,6 +32,7 @@ export(logistic5p)
 export(makeLociList)
 export(makeVegTerrainPCA)
 export(multiplier)
+export(oom)
 export(prepTerrainCovariates)
 export(rbetaBetween)
 export(runDEoptim)
@@ -131,6 +133,7 @@ importFrom(stats,dbinom)
 importFrom(stats,dnorm)
 importFrom(stats,is.empty.model)
 importFrom(stats,median)
+importFrom(stats,model.matrix)
 importFrom(stats,prcomp)
 importFrom(stats,predict)
 importFrom(stats,quantile)
