cleanup, fixes, export makeTSD

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -30,6 +30,7 @@ export(logistic3p)
 export(logistic4p)
 export(logistic5p)
 export(makeLociList)
+export(makeTSD)
 export(makeVegTerrainPCA)
 export(multiplier)
 export(oom)
