some functions that were in R folders

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -35,8 +35,10 @@ export(makeVegTerrainPCA)
 export(multiplier)
 export(oom)
 export(prepTerrainCovariates)
+export(pw)
 export(rbetaBetween)
 export(runDEoptim)
+export(stackAndExtract)
 export(visualizeDE)
 import(methods)
 importFrom(DEoptim,DEoptim)
@@ -94,6 +96,7 @@ importFrom(quickPlot,dev)
 importFrom(quickPlot,gpar)
 importFrom(quickPlot,isRstudioServer)
 importFrom(raster,"crs<-")
+importFrom(raster,brick)
 importFrom(raster,buffer)
 importFrom(raster,cellFromXY)
 importFrom(raster,compareCRS)
@@ -135,6 +138,7 @@ importFrom(stats,dnorm)
 importFrom(stats,is.empty.model)
 importFrom(stats,median)
 importFrom(stats,model.matrix)
+importFrom(stats,na.omit)
 importFrom(stats,prcomp)
 importFrom(stats,predict)
 importFrom(stats,quantile)
