export those fns

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -33,6 +33,9 @@ export(makeLociList)
 export(makeTSD)
 export(makeVegTerrainPCA)
 export(multiplier)
+export(objIgnition)
+export(objIgnitionPW)
+export(objNlminb)
 export(oom)
 export(prepTerrainCovariates)
 export(pw)
