cleaning up and fix errors
@ianmseddy note that `objIgniton` and `objIginitonPW` renamed to `.objFunIgnition` and `.objFunIgnitionPW`, respectively. this matches equivalent for spread fit.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,6 +6,8 @@ S3method(annualStackToDTx1000,list)
 S3method(bufferToArea,SpatialPolygons)
 S3method(bufferToArea,list)
 export(.doDataChecks)
+export(.objFunIgnition)
+export(.objFunIgnitionPW)
 export(.objfunSpreadFit)
 export(DEoptimIterative)
 export(annualStackToDTx1000)
@@ -33,8 +35,6 @@ export(makeLociList)
 export(makeTSD)
 export(makeVegTerrainPCA)
 export(multiplier)
-export(objIgnition)
-export(objIgnitionPW)
 export(objNlminb)
 export(oom)
 export(prepTerrainCovariates)
@@ -142,6 +142,7 @@ importFrom(stats,is.empty.model)
 importFrom(stats,median)
 importFrom(stats,model.matrix)
 importFrom(stats,na.omit)
+importFrom(stats,nlminb)
 importFrom(stats,prcomp)
 importFrom(stats,predict)
 importFrom(stats,quantile)
