--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,8 +2,8 @@ Package: fireSenseUtils
 Type: Package
 Title: Utilities for Working With the 'fireSense' Group of 'SpaDES' Modules
 Description: Utilities for working with the 'fireSense' group of 'SpaDES' modules.
-Date: 2021-01-05
-Version: 0.0.4.9000
+Date: 2021-01-08
+Version: 0.0.4.9001
 Authors@R: c(
     person("Jean", "Marchal", email = "jean.d.marchal@gmail.com",
     role = c("aut")),
@@ -23,7 +23,6 @@ Imports:
     EnvStats,
     fasterize,
     future,
-    future.apply,
     kSamples,
     LandR,
     magrittr,
@@ -44,6 +43,7 @@ Imports:
     stats
 Suggests:
     dplyr,
+    ggplot2,
     knitr,
     lintr,
     PtProcess,
