--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -3,7 +3,7 @@ Type: Package
 Title: Utilities for Working With the 'fireSense' Group of 'SpaDES' Modules
 Description: Utilities for working with the 'fireSense' group of 'SpaDES' modules.
 Date: 2021-01-28
-Version: 0.0.4.9004
+Version: 0.0.4.9005
 Authors@R: c(
     person("Jean", "Marchal", email = "jean.d.marchal@gmail.com",
     role = c("aut")),
@@ -19,6 +19,7 @@ Depends:
 Imports:
     crayon,
     data.table,
+    devtools,
     DEoptim,
     EnvStats,
     fasterize,
