--- a/NAMESPACE
+++ b/NAMESPACE
@@ -42,6 +42,7 @@ export(pw)
 export(rbetaBetween)
 export(runDEoptim)
 export(stackAndExtract)
+export(updateStackYearNames)
 export(visualizeDE)
 import(methods)
 importFrom(DEoptim,DEoptim)
