cleanup for R CMD check

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -154,4 +154,5 @@ importFrom(utils,getFromNamespace)
 importFrom(utils,head)
 importFrom(utils,install.packages)
 importFrom(utils,modifyList)
+importFrom(utils,packageVersion)
 importFrom(utils,tail)
