add makeMutuallyExclusive fn

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -32,6 +32,7 @@ export(logistic3p)
 export(logistic4p)
 export(logistic5p)
 export(makeLociList)
+export(makeMutuallyExclusive)
 export(makeTSD)
 export(makeVegTerrainPCA)
 export(multiplier)
