--- a/NAMESPACE
+++ b/NAMESPACE
@@ -19,8 +19,8 @@ export(burnProbFromClass)
 export(calcYoungAge)
 export(castCohortData)
 export(chk_duplicatedStartPixels)
-export(classifyCohortsFireSenseSpread)
 export(climateRasterToDataTable)
+export(cohortsToFuelClasses)
 export(dtReplaceNAwith0)
 export(extractSpecial)
 export(getFirePoints_NFDB)
