declare qs dependency

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -95,6 +95,8 @@ importFrom(purrr,map)
 importFrom(purrr,map2)
 importFrom(purrr,pmap)
 importFrom(purrr,transpose)
+importFrom(qs,qread)
+importFrom(qs,qsave)
 importFrom(quickPlot,Plot)
 importFrom(quickPlot,clearPlot)
 importFrom(quickPlot,dev)
