fixed ignition functions - cmd issues though

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,6 +11,7 @@ export(.objFunIgnitionPW)
 export(.objfunSpreadFit)
 export(DEoptimIterative)
 export(annualStackToDTx1000)
+export(bufferIgnitionPoints)
 export(bufferToArea)
 export(burnClassGenerator)
 export(burnClassPredict)
