disable plotting by default in getFirePoints; cleanup/fixes

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -115,9 +115,11 @@ importFrom(raster,getValues)
 importFrom(raster,isLonLat)
 importFrom(raster,ncell)
 importFrom(raster,nlayers)
+importFrom(raster,plot)
 importFrom(raster,raster)
 importFrom(raster,res)
 importFrom(raster,setValues)
+importFrom(raster,shapefile)
 importFrom(raster,stack)
 importFrom(raster,terrain)
 importFrom(raster,trim)
