--- a/NAMESPACE
+++ b/NAMESPACE
@@ -42,6 +42,7 @@ export(oom)
 export(prepTerrainCovariates)
 export(pw)
 export(rbetaBetween)
+export(rescaleKnown2)
 export(runDEoptim)
 export(stackAndExtract)
 export(updateStackYearNames)
