re-doc and re-build

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -42,6 +42,7 @@ export(oom)
 export(prepTerrainCovariates)
 export(pw)
 export(rbetaBetween)
+export(rescale)
 export(rescaleKnown2)
 export(runDEoptim)
 export(stackAndExtract)
@@ -76,6 +77,7 @@ importFrom(data.table,setnafill)
 importFrom(data.table,setnames)
 importFrom(data.table,setorderv)
 importFrom(fasterize,fasterize)
+importFrom(fpCompare,"%==%")
 importFrom(future,makeClusterPSOCK)
 importFrom(grDevices,dev.off)
 importFrom(grDevices,png)
