--- a/NAMESPACE
+++ b/NAMESPACE
@@ -53,6 +53,7 @@ importFrom(DEoptim,DEoptim)
 importFrom(DEoptim,DEoptim.control)
 importFrom(EnvStats,demp)
 importFrom(LandR,asInteger)
+importFrom(LandR,rescale)
 importFrom(RhpcBLASctl,blas_get_num_procs)
 importFrom(RhpcBLASctl,blas_set_num_threads)
 importFrom(RhpcBLASctl,omp_get_max_threads)
@@ -77,7 +78,6 @@ importFrom(data.table,setnafill)
 importFrom(data.table,setnames)
 importFrom(data.table,setorderv)
 importFrom(fasterize,fasterize)
-importFrom(fpCompare,"%==%")
 importFrom(future,makeClusterPSOCK)
 importFrom(grDevices,dev.off)
 importFrom(grDevices,png)
