new: predictIgnition function

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -39,6 +39,7 @@ export(makeVegTerrainPCA)
 export(multiplier)
 export(objNlminb)
 export(oom)
+export(predictIgnition)
 export(prepTerrainCovariates)
 export(pw)
 export(rbetaBetween)
