use parallelly::makeClusterPSOCK directly instead of future

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -79,7 +79,6 @@ importFrom(data.table,setnafill)
 importFrom(data.table,setnames)
 importFrom(data.table,setorderv)
 importFrom(fasterize,fasterize)
-importFrom(future,makeClusterPSOCK)
 importFrom(grDevices,dev.off)
 importFrom(grDevices,png)
 importFrom(graphics,abline)
@@ -95,6 +94,7 @@ importFrom(pROC,roc)
 importFrom(parallel,clusterEvalQ)
 importFrom(parallel,clusterExport)
 importFrom(parallel,stopCluster)
+importFrom(parallelly,makeClusterPSOCK)
 importFrom(pemisc,rasterToMatch)
 importFrom(purrr,map)
 importFrom(purrr,map2)
