--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,8 +2,8 @@ Package: fireSenseUtils
 Type: Package
 Title: Utilities for Working With the 'fireSense' Group of 'SpaDES' Modules
 Description: Utilities for working with the 'fireSense' group of 'SpaDES' modules.
-Date: 2021-06-17
-Version: 0.0.4.9080
+Date: 2021-08-24
+Version: 0.0.4.9081
 Authors@R: c(
     person("Jean", "Marchal", email = "jean.d.marchal@gmail.com",
     role = c("aut")),
@@ -23,7 +23,6 @@ Imports:
     EnvStats,
     fasterize,
     fpCompare,
-    future,
     kSamples,
     LandR (>= 1.0.0.9002),
     magrittr,
@@ -31,6 +30,7 @@ Imports:
     methods,
     qs,
     quickPlot,
+    parallelly,
     pemisc,
     pROC,
     purrr,
