--- a/NAMESPACE
+++ b/NAMESPACE
@@ -13,6 +13,7 @@ export(DEoptimIterative)
 export(annualStackToDTx1000)
 export(bufferIgnitionPoints)
 export(bufferToArea)
+export(buildTerrainDT)
 export(burnClassGenerator)
 export(burnClassPredict)
 export(burnClassSummary)
@@ -32,6 +33,7 @@ export(logistic2p)
 export(logistic3p)
 export(logistic4p)
 export(logistic5p)
+export(makeLandcoverDT)
 export(makeLociList)
 export(makeMutuallyExclusive)
 export(makeTSD)
@@ -78,6 +80,7 @@ importFrom(data.table,setkeyv)
 importFrom(data.table,setnafill)
 importFrom(data.table,setnames)
 importFrom(data.table,setorderv)
+importFrom(fastDummies,dummy_cols)
 importFrom(fasterize,fasterize)
 importFrom(grDevices,dev.off)
 importFrom(grDevices,png)
