cleanup + fixes for R CMD check

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -147,6 +147,7 @@ importFrom(sf,st_transform)
 importFrom(sp,"coordinates<-")
 importFrom(sp,SpatialPoints)
 importFrom(sp,SpatialPointsDataFrame)
+importFrom(sp,identicalCRS)
 importFrom(sp,spTransform)
 importFrom(spatialEco,hli)
 importFrom(stats,as.formula)
