us sf instead of sp/rgeos for fire polygon areas

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -139,6 +139,8 @@ importFrom(reproducible,loadFromCache)
 importFrom(reproducible,prepInputs)
 importFrom(reproducible,projectInputs)
 importFrom(reproducible,showCache)
+importFrom(sf,as_Spatial)
+importFrom(sf,st_area)
 importFrom(sf,st_as_sf)
 importFrom(sf,st_collection_extract)
 importFrom(sf,st_crs)
