--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -7,11 +7,11 @@ Version: 0.0.5.9006
 Authors@R: c(
     person("Jean", "Marchal", email = "jean.d.marchal@gmail.com",
     role = c("aut")),
-    person("Eliot J B", "McIntire", email = "eliot.mcintire@canada.ca",
+    person("Eliot J B", "McIntire", email = "eliot.mcintire@nrcan-rncan.gc.ca",
     role = c("aut", "cre"), comment=c(ORCID = "0000-0002-6914-8316")),
     person("Alex M", "Chubaty", email = "achubaty@for-cast.ca",
     role = c("aut"), comment = c(ORCID = "0000-0001-7146-8135")),
-    person("Ian", "Eddy", email = "ian.eddy@canada.ca",
+    person("Ian", "Eddy", email = "ian.eddy@nrcan-rncan.gc.ca",
     role = c("aut"), comment = c(ORCID = "0000-0001-7397-2116"))
     )
 Depends:
