--- a/NAMESPACE
+++ b/NAMESPACE
@@ -145,6 +145,7 @@ importFrom(sf,st_as_sf)
 importFrom(sf,st_collection_extract)
 importFrom(sf,st_crs)
 importFrom(sf,st_transform)
+importFrom(sf,st_zm)
 importFrom(sp,"coordinates<-")
 importFrom(sp,SpatialPoints)
 importFrom(sp,SpatialPointsDataFrame)
