add summary plots

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -42,6 +42,9 @@ export(makeVegTerrainPCA)
 export(multiplier)
 export(objNlminb)
 export(oom)
+export(plotBurnSummary)
+export(plotCumulativeBurns)
+export(plotHistoricFires)
 export(predictIgnition)
 export(prepTerrainCovariates)
 export(pw)
@@ -112,6 +115,7 @@ importFrom(quickPlot,gpar)
 importFrom(quickPlot,isRstudioServer)
 importFrom(raster,"crs<-")
 importFrom(raster,buffer)
+importFrom(raster,calc)
 importFrom(raster,cellFromXY)
 importFrom(raster,compareCRS)
 importFrom(raster,crop)
@@ -120,6 +124,8 @@ importFrom(raster,extent)
 importFrom(raster,extract)
 importFrom(raster,getValues)
 importFrom(raster,isLonLat)
+importFrom(raster,mask)
+importFrom(raster,maxValue)
 importFrom(raster,ncell)
 importFrom(raster,nlayers)
 importFrom(raster,plot)
@@ -152,13 +158,16 @@ importFrom(sp,SpatialPointsDataFrame)
 importFrom(sp,identicalCRS)
 importFrom(sp,spTransform)
 importFrom(stats,as.formula)
+importFrom(stats,coefficients)
 importFrom(stats,dbinom)
 importFrom(stats,dnorm)
 importFrom(stats,is.empty.model)
+importFrom(stats,lm)
 importFrom(stats,median)
 importFrom(stats,model.matrix)
 importFrom(stats,na.omit)
 importFrom(stats,nlminb)
+importFrom(stats,pf)
 importFrom(stats,prcomp)
 importFrom(stats,predict)
 importFrom(stats,quantile)
