--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,8 +2,8 @@ Package: fireSenseUtils
 Type: Package
 Title: Utilities for Working With the 'fireSense' Group of 'SpaDES' Modules
 Description: Utilities for working with the 'fireSense' group of 'SpaDES' modules.
-Date: 2022-01-25
-Version: 0.0.5.9012
+Date: 2022-02-19
+Version: 0.0.5.9013
 Authors@R: c(
     person("Jean", "Marchal", email = "jean.d.marchal@gmail.com",
     role = c("aut")),
@@ -44,12 +44,15 @@ Imports:
     stats,
     utils
 Suggests:
+    cowplot,
     dplyr,
     ggplot2,
     knitr,
     lintr,
     parallel,
     PtProcess,
+    rasterVis,
+    RColorBrewer,
     Require,
     rmarkdown,
     SpaDES.core,
