add logPath to runDEoptim() + cleanup

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -69,6 +69,8 @@ importFrom(SpaDES.tools,distanceFromEachPoint)
 importFrom(SpaDES.tools,rasterizeReduced)
 importFrom(SpaDES.tools,spread)
 importFrom(crayon,blurred)
+importFrom(crayon,green)
+importFrom(crayon,yellow)
 importFrom(data.table,":=")
 importFrom(data.table,as.data.table)
 importFrom(data.table,copy)
