--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -3,7 +3,7 @@ Type: Package
 Title: Utilities for Working With the 'fireSense' Group of 'SpaDES' Modules
 Description: Utilities for working with the 'fireSense' group of 'SpaDES' modules.
 Date: 2022-02-19
-Version: 0.0.5.9013
+Version: 0.0.5.9015
 Authors@R: c(
     person("Jean", "Marchal", email = "jean.d.marchal@gmail.com",
     role = c("aut")),
@@ -23,7 +23,6 @@ Imports:
     EnvStats,
     fastDummies,
     fasterize,
-    fpCompare,
     kSamples,
     LandR (>= 1.0.0.9002),
     magrittr,
@@ -56,6 +55,7 @@ Suggests:
     Require,
     rmarkdown,
     SpaDES.core,
+    SpaDES.install (>= 0.0.6.9015),
     spatialEco,
     spatstat,
     spelling,
@@ -63,6 +63,8 @@ Suggests:
 Remotes:
     PredictiveEcology/LandR@development,
     PredictiveEcology/pemisc@development,
+    PredictiveEcology/SpaDES.core@development,
+    PredictiveEcology/SpaDES.install@installFromSource,
     PredictiveEcology/SpaDES.tools@development,
     PredictiveEcology/quickPlot@development,
     PredictiveEcology/reproducible@development
