fixing plot_summaries

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -101,6 +101,7 @@ importFrom(mclust,mclustBIC)
 importFrom(pROC,roc)
 importFrom(parallel,clusterEvalQ)
 importFrom(parallel,clusterExport)
+importFrom(parallel,mclapply)
 importFrom(parallel,stopCluster)
 importFrom(parallelly,makeClusterPSOCK)
 importFrom(pemisc,rasterToMatch)
