remove magrittr dependency
`%>%` re-exported by `sf` (among others) so use it from there

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -95,7 +95,6 @@ importFrom(graphics,hist)
 importFrom(graphics,mtext)
 importFrom(graphics,par)
 importFrom(kSamples,ad.test)
-importFrom(magrittr,"%>%")
 importFrom(mclust,Mclust)
 importFrom(mclust,mclustBIC)
 importFrom(pROC,roc)
@@ -148,6 +147,7 @@ importFrom(reproducible,loadFromCache)
 importFrom(reproducible,prepInputs)
 importFrom(reproducible,projectInputs)
 importFrom(reproducible,showCache)
+importFrom(sf,"%>%")
 importFrom(sf,as_Spatial)
 importFrom(sf,st_area)
 importFrom(sf,st_as_sf)
