--- a/NAMESPACE
+++ b/NAMESPACE
@@ -151,6 +151,7 @@ importFrom(sf,"%>%")
 importFrom(sf,as_Spatial)
 importFrom(sf,st_area)
 importFrom(sf,st_as_sf)
+importFrom(sf,st_collection_extract)
 importFrom(sf,st_crs)
 importFrom(sf,st_transform)
 importFrom(sf,st_zm)
