add sf method for `bufferToArea`

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,7 @@ S3method(annualStackToDTx1000,RasterStack)
 S3method(annualStackToDTx1000,list)
 S3method(bufferToArea,SpatialPolygons)
 S3method(bufferToArea,list)
+S3method(bufferToArea,sf)
 export(.doDataChecks)
 export(.objFunIgnition)
 export(.objFunIgnitionPW)
