--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,8 +2,8 @@ Package: fireSenseUtils
 Type: Package
 Title: Utilities for Working With the 'fireSense' Group of 'SpaDES' Modules
 Description: Utilities for working with the 'fireSense' group of 'SpaDES' modules.
-Date: 2022-04-19
-Version: 0.0.5.9026
+Date: 2022-07-04
+Version: 0.0.5.9027
 Authors@R: c(
     person("Jean", "Marchal", email = "jean.d.marchal@gmail.com",
            role = c("aut")),
@@ -63,7 +63,7 @@ Remotes:
     PredictiveEcology/LandR@development,
     PredictiveEcology/pemisc@development,
     PredictiveEcology/SpaDES.core@development,
-    PredictiveEcology/SpaDES.install@installFromSource,
+    PredictiveEcology/SpaDES.install@development,
     PredictiveEcology/SpaDES.tools@development,
     PredictiveEcology/quickPlot@development,
     PredictiveEcology/reproducible@development
