--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -3,7 +3,7 @@ Type: Package
 Title: Utilities for Working With the 'fireSense' Group of 'SpaDES' Modules
 Description: Utilities for working with the 'fireSense' group of 'SpaDES' modules.
 Date: 2022-07-04
-Version: 0.0.5.9027
+Version: 0.0.5.9028
 Authors@R: c(
     person("Jean", "Marchal", email = "jean.d.marchal@gmail.com",
            role = c("aut")),
@@ -51,7 +51,7 @@ Suggests:
     PtProcess,
     rasterVis,
     RColorBrewer,
-    Require,
+    Require (>= 0.1.0.9003),
     rmarkdown,
     SpaDES.core,
     SpaDES.install (>= 0.0.6.9015),
@@ -66,6 +66,7 @@ Remotes:
     PredictiveEcology/SpaDES.install@development,
     PredictiveEcology/SpaDES.tools@development,
     PredictiveEcology/quickPlot@development,
+    PredictiveEcology/Require@development,
     PredictiveEcology/reproducible@development
 VignetteBuilder:
     knitr,
