--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,8 +2,8 @@ Package: fireSenseUtils
 Type: Package
 Title: Utilities for Working With the 'fireSense' Group of 'SpaDES' Modules
 Description: Utilities for working with the 'fireSense' group of 'SpaDES' modules.
-Date: 2022-07-04
-Version: 0.0.5.9028
+Date: 2023-01-23
+Version: 0.0.5.9029
 Authors@R: c(
     person("Jean", "Marchal", email = "jean.d.marchal@gmail.com",
            role = c("aut")),
@@ -58,6 +58,7 @@ Suggests:
     spatialEco,
     spatstat,
     spelling,
+    terra,
     testthat
 Remotes:
     PredictiveEcology/LandR@development,
@@ -76,4 +77,4 @@ Language: en-CA
 LazyData: true
 License: GPL-3
 BugReports: https://github.com/PredictiveEcology/fireSenseUtils/issues
-RoxygenNote: 7.1.2
+RoxygenNote: 7.2.3
