--- a/NAMESPACE
+++ b/NAMESPACE
@@ -181,6 +181,7 @@ importFrom(stats,terms)
 importFrom(utils,getFromNamespace)
 importFrom(utils,head)
 importFrom(utils,install.packages)
+importFrom(utils,installed.packages)
 importFrom(utils,modifyList)
 importFrom(utils,packageVersion)
 importFrom(utils,tail)
