use parallelly::availableCores()

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -103,6 +103,7 @@ importFrom(parallel,clusterEvalQ)
 importFrom(parallel,clusterExport)
 importFrom(parallel,mclapply)
 importFrom(parallel,stopCluster)
+importFrom(parallelly,availableCores)
 importFrom(parallelly,makeClusterPSOCK)
 importFrom(pemisc,rasterToMatch)
 importFrom(purrr,map)
