--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -3,7 +3,7 @@ Type: Package
 Title: Utilities for Working With the 'fireSense' Group of 'SpaDES' Modules
 Description: Utilities for working with the 'fireSense' group of 'SpaDES' modules.
 Date: 2022-04-19
-Version: 0.0.5.9026
+Version: 0.0.5.9027
 Authors@R: c(
     person("Jean", "Marchal", email = "jean.d.marchal@gmail.com",
            role = c("aut")),
@@ -34,7 +34,7 @@ Imports:
     pROC,
     purrr,
     raster,
-    reproducible,
+    reproducible (>= 1.2.16.9018),
     RhpcBLASctl,
     sf,
     sp,
@@ -75,4 +75,4 @@ Language: en-CA
 LazyData: true
 License: GPL-3
 BugReports: https://github.com/PredictiveEcology/fireSenseUtils/issues
-RoxygenNote: 7.1.2
+RoxygenNote: 7.2.3
