--- a/NAMESPACE
+++ b/NAMESPACE
@@ -146,6 +146,7 @@ importFrom(reproducible,Cache)
 importFrom(reproducible,Checksums)
 importFrom(reproducible,checkPath)
 importFrom(reproducible,loadFromCache)
+importFrom(reproducible,postProcess)
 importFrom(reproducible,prepInputs)
 importFrom(reproducible,projectInputs)
 importFrom(reproducible,showCache)
