--- a/NAMESPACE
+++ b/NAMESPACE
@@ -14,6 +14,7 @@ export(DEoptimIterative)
 export(annualStackToDTx1000)
 export(bufferIgnitionPoints)
 export(bufferToArea)
+export(bufferToAreaRast)
 export(buildTerrainDT)
 export(burnClassGenerator)
 export(burnClassPredict)
@@ -49,6 +50,8 @@ export(plotHistoricFires)
 export(predictIgnition)
 export(prepTerrainCovariates)
 export(pw)
+export(rasterFireBufferDT)
+export(rasterFireSpreadPoints)
 export(rbetaBetween)
 export(rescale)
 export(rescaleKnown2)
@@ -155,8 +158,11 @@ importFrom(sf,"%>%")
 importFrom(sf,as_Spatial)
 importFrom(sf,st_area)
 importFrom(sf,st_as_sf)
+importFrom(sf,st_centroid)
 importFrom(sf,st_collection_extract)
 importFrom(sf,st_crs)
+importFrom(sf,st_multipoint)
+importFrom(sf,st_nearest_points)
 importFrom(sf,st_transform)
 importFrom(sf,st_zm)
 importFrom(sp,"coordinates<-")
@@ -181,6 +187,11 @@ importFrom(stats,quantile)
 importFrom(stats,rbeta)
 importFrom(stats,rnorm)
 importFrom(stats,terms)
+importFrom(terra,buffer)
+importFrom(terra,patches)
+importFrom(terra,res)
+importFrom(terra,values)
+importFrom(terra,xyFromCell)
 importFrom(utils,getFromNamespace)
 importFrom(utils,head)
 importFrom(utils,install.packages)
