rasterized fire - terra now in imports

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -36,6 +36,7 @@ export(logistic2p)
 export(logistic3p)
 export(logistic4p)
 export(logistic5p)
+export(makeFireIDs)
 export(makeLandcoverDT)
 export(makeLociList)
 export(makeMutuallyExclusive)
@@ -155,6 +156,7 @@ importFrom(reproducible,prepInputs)
 importFrom(reproducible,projectInputs)
 importFrom(reproducible,showCache)
 importFrom(sf,"%>%")
+importFrom(sf,"st_crs<-")
 importFrom(sf,as_Spatial)
 importFrom(sf,st_area)
 importFrom(sf,st_as_sf)
@@ -189,6 +191,7 @@ importFrom(stats,rnorm)
 importFrom(stats,terms)
 importFrom(terra,buffer)
 importFrom(terra,patches)
+importFrom(terra,rast)
 importFrom(terra,res)
 importFrom(terra,values)
 importFrom(terra,xyFromCell)
