--- a/NAMESPACE
+++ b/NAMESPACE
@@ -86,6 +86,7 @@ importFrom(data.table,rbindlist)
 importFrom(data.table,set)
 importFrom(data.table,setDT)
 importFrom(data.table,setDTthreads)
+importFrom(data.table,setcolorder)
 importFrom(data.table,setkey)
 importFrom(data.table,setkeyv)
 importFrom(data.table,setnafill)
